# uc-intg-lmserver

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_lmserver/: __init__.py  config.py  driver.py  lms_client.py  lms_media_player.py  lms_remote.py  setup_flow.py
